<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_first">

    <Button
        android:id="@+id/buttonNavegador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickNavegador"
        android:text="@string/buttonNavegador" />

    <Button
        android:id="@+id/buttonLlamada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickLlamada"
        android:text="@string/buttonLlamada" />

    <Button
        android:id="@+id/buttonUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonUbicacion" />
</LinearLayout>